@@ -21,6 +21,7 @@ import com.powsybl.openloadflow.network.LfAction;
 import com.powsybl.openloadflow.network.LfBus;
 import com.powsybl.openloadflow.network.LfNetwork;
 import com.powsybl.openloadflow.network.NodeBreakerNetworkFactory;
+import com.powsybl.openloadflow.network.impl.LfNetworkList;
 import com.powsybl.openloadflow.network.impl.Networks;
 import com.powsybl.openloadflow.network.impl.PropagatedContingency;
 import com.powsybl.security.action.SwitchAction;
@@ -60,21 +61,22 @@ class LfActionTest extends AbstractConverterTest {
         var matrixFactory = new DenseMatrixFactory();
         AcLoadFlowParameters acParameters = OpenLoadFlowParameters.createAcParameters(network,
                 new LoadFlowParameters(), new OpenLoadFlowParameters(), matrixFactory, new NaiveGraphConnectivityFactory<>(LfBus::getNum), Reporter.NO_OP, true, false);
-        List<LfNetwork> lfNetworks = Networks.load(network, acParameters.getNetworkParameters(), Set.of(network.getSwitch("C")), Collections.emptySet(), Reporter.NO_OP);
-        LfNetwork lfNetwork = lfNetworks.get(0);
-        LfAction lfAction = new LfAction(switchAction, lfNetwork);
-        String loadId = "LOAD";
-        Contingency contingency = new Contingency(loadId, new LoadContingency("LD"));
-        PropagatedContingency propagatedContingency = PropagatedContingency.createList(network,
-                Collections.singletonList(contingency), new HashSet<>(), false, false, false, true).get(0);
-        propagatedContingency.toLfContingency(lfNetwork).ifPresent(lfContingency -> {
-            LfAction.apply(List.of(lfAction), lfNetwork, lfContingency);
-            assertTrue(lfNetwork.getBranchById("C").isDisabled());
-            assertEquals("C", lfAction.getDisabledBranch().getId());
-            assertNull(lfAction.getEnabledBranch());
-        });
+        try (LfNetworkList lfNetworks = Networks.load(network, acParameters.getNetworkParameters(), Set.of(network.getSwitch("C")), Collections.emptySet(), Reporter.NO_OP)) {
+            LfNetwork lfNetwork = lfNetworks.getList().get(0);
+            LfAction lfAction = new LfAction(switchAction, lfNetwork);
+            String loadId = "LOAD";
+            Contingency contingency = new Contingency(loadId, new LoadContingency("LD"));
+            PropagatedContingency propagatedContingency = PropagatedContingency.createList(network,
+                    Collections.singletonList(contingency), new HashSet<>(), false, false, false, true).get(0);
+            propagatedContingency.toLfContingency(lfNetwork).ifPresent(lfContingency -> {
+                LfAction.apply(List.of(lfAction), lfNetwork, lfContingency);
+                assertTrue(lfNetwork.getBranchById("C").isDisabled());
+                assertEquals("C", lfAction.getDisabledBranch().getId());
+                assertNull(lfAction.getEnabledBranch());
+            });
 
-        SwitchAction switchAction2 = new SwitchAction("switchAction", "S", true);
-        assertThrows(PowsyblException.class, () -> new LfAction(switchAction2, lfNetwork), "Branch S not found in the network");
+            SwitchAction switchAction2 = new SwitchAction("switchAction", "S", true);
+            assertThrows(PowsyblException.class, () -> new LfAction(switchAction2, lfNetwork), "Branch S not found in the network");
+        }
     }
 }
